@@ -188,7 +188,8 @@ void totem_add_to_playlist_and_play		(Totem *totem,
 						 const char *display_name,
 						 gboolean add_to_recent);
 char *  totem_get_current_mrl			(Totem *totem);
-
+void	totem_set_current_subtitle		(Totem *totem,
+						 const char *subtitle_uri);
 /* Sidebar handling */
 void    totem_add_sidebar_page			(Totem *totem,
 						 const char *page_id,
